[package]
name = "hrt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
anyhow = "1.0"
thiserror = "1.0"
hrt-shared = { path = "../shared" }
lopdf = "0.39"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "sqlite", "postgres"] }
