[package]
name = "hrt-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
gloo-events = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
urlencoding = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "Clipboard", "Document", "Element", "EventTarget", "File", "FileList", "FileReader", "FormData", "HtmlAnchorElement", "HtmlCanvasElement", "HtmlDivElement", "HtmlElement", "HtmlInputElement", "Location", "MouseEvent", "Navigator", "ProgressEvent", "Url", "Window"] }
plotters = "0.3"
plotters-canvas = "0.3"
hrt-shared = { path = "../shared" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs"] }
reqwest = { version = "0.12", features = ["json"] }
